<!-- Container Layout -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.add.AddStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Progress Bar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Linear Progress Indicator -->
        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressIndicator"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/addImage"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/preview_image"
            android:src="@drawable/image_placeholder"
            app:layout_constraintTop_toBottomOf="@id/progressIndicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Description Input -->
        <EditText
            android:id="@+id/edAddDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            android:autofillHints=""
            android:gravity="start|top"
            android:hint="@string/desc"
            android:inputType="textMultiLine"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/addImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Choose Image Label -->
        <TextView
            android:id="@+id/chooseLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/choose_image"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/edAddDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Buttons Layout -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/addGallery"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/gallery"
            app:layout_constraintTop_toBottomOf="@id/chooseLabel"
            app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/addCamera"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/camera"
            app:layout_constraintTop_toBottomOf="@id/chooseLabel"
            app:layout_constraintStart_toEndOf="@id/guidelineCenter"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Button to Upload Story -->
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/upload_story"
            app:layout_constraintTop_toBottomOf="@id/addGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
